# phone-check

./: .gitignore  README.md  pyproject.toml  render.yaml
doc/: calibration.md
doc/dev/: initial-thoughts.md
phone_check/: api.py  canvas_db.py  detector.py  iphone_db.py
phone_check/data/: canvas_hashes.json
phone_check/static/: index.html  probe.html
scripts/: browserstack_probe.py
tests/: test_api.py  test_canvas_db.py  test_detector.py  test_iphone_db.py
